model num added, size table mod fixed on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -157,7 +157,7 @@ span{
   display: none;
 }
 #sizingTable{
- border-radius: 7px;
+
 }
 
 .hide-overflow{
